# fmri-tutorial

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  content_request.md
.github/workflows/: lint_notebooks.yml  test_scripts.yml  validate_bids.yml
data/: README.md  download_openneuro.sh
data/example_bids/: dataset_description.json  participants.json  participants.tsv  task-emotionreg_bold.json
data/example_dicoms/: README.md  generate_synthetic_dicoms.py
data/heuristics/: README.md  emotion_regulation_heuristic.py  tom_task_heuristic.py
docs/: faq.md  index.md
docs/api/: utils.md
environments/: Dockerfile  README.md  docker-compose.yml  environment_full.yml  environment_minimal.yml  environment_nipype.yml  setup_environment.sh
environments/singularity/: fmriprep.def  mriqc.def
module_00_environment_setup/: 00_environment_setup.ipynb  README.md  verify_installation.py
module_01_fmri_data_and_bids/: 01_bids_overview.ipynb  01_understanding_fmri_data.ipynb  README.md
module_02_heudiconv/: 02_heudiconv_conversion.ipynb  README.md
module_03_bids_validation/: 03_bids_validation.ipynb  README.md
module_04_events_files/: 04_events_files.ipynb  README.md
module_05_mriqc/: 05_mriqc.ipynb  README.md
module_06_qc_decisions/: 06_qc_decisions.ipynb  README.md
module_07_fmriprep/: 07_fmriprep_docker.ipynb  07_fmriprep_singularity.ipynb  README.md
module_08_nipype_workflows/: 08_nipype_workflows.ipynb  README.md
module_09_fmriprep_outputs/: 09_fmriprep_outputs.ipynb  README.md
module_10_glm_preparation/: 10_glm_preparation.ipynb  README.md
tests/: README.md  conftest.py  test_bids_helpers.py  test_dicom_helpers.py  test_events_conversion.py  test_glm_preparation.py  test_nipype_workflow.py
utils/: __init__.py  bids_helpers.py  dicom_helpers.py  io_utils.py  mriqc_helpers.py  nipype_helpers.py  plotting.py
(+29 files in other folders)
